# wikiticketcalendarmacro

./: .gitlab-ci.yml  README.md  pyproject.toml
wikiticketcalendarmacro/: WikiTicketCalendarMacro.py
