[tool.poetry]
name = "WikiTicketCalendarMacro"
version = "0.8.8"
description = "Macro for the Trac Wiki to display Milestones and Tickets from the Ticketing system in a calendar view"
authors = ["mcomb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.plugins."trac.plugins"]
"WikiTicketCalendarMacro" = "WikiTicketCalendarMacro"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
