[tool.poetry]
name = "WikiTicketCalendarMacro"
version = "1.0"
description = "Full page Milestone and Ticket calendar for Trac wiki"
authors = ["Matthew Good <trac@matt-good.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.plugins."trac.plugins"]
"WikiTicketCalendarMacro" = "WikiTicketCalendarMacro"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
